--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -611,6 +611,20 @@ section {
   padding-right: 20px;
 }
 
+.zoom {
+  padding: 0px;
+  transition: transform .2s;
+  width: auto;
+  height: auto;
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  -ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.5); 
+}
+
 /*--------------------------------------------------------------
 # Portfolio Details
 --------------------------------------------------------------*/
